# AlgoTrade-X

./: .gitignore  AlgoTrade-X.cbp  ArbitrageX.cbp  CMakeLists.txt  README.md  fetcher.cpp  main.cpp  parser.cpp  run_out.txt  stress_results.csv  variantforge_engine.cpp
docs/: realtime_architecture.md
src/: fetcher.cpp  main.cpp  market_snapshot.h  parser.cpp  variantforge_engine.cpp  websocket_feed.cpp  websocket_feed.h
src/realtime/: binance_stream_parser.cpp  binance_stream_parser.h  connection_state.h  realtime_config.h  realtime_interfaces.h  websocket_beast_client.cpp  websocket_beast_client.h  websocket_client.cpp  websocket_client.h  websocket_update.h
